--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!--<link rel="stylesheet" href="css/syntax.css">
+        -->
         <title>CSS for beginners</title>
+        <style>
+
+            .welcome{
+                font-size: 10px;
+                color: red;
+            }
+        
+        </style>
     </head>
 
     <body>
         
-        <div id="header"></div>
+        <p class="welcome">Welcome!</p>
+
+        <div id="header" style="position: absolute; top: 0; left: 0; width: 100%"></div>
             <h1>Selectors</h1>
             <h2>In CSS</h2>
             <p>Welcome to the website!</p>
         </div>
 
+        <p>Hello there stranger!</p>
+        <p>Hello there stranger!</p>
+        <p>Hello there stranger!</p>
+        <p>Hello there stranger!</p>
+        <p>Hello there stranger!</p>
+        <p>Hello there stranger!</p>
+        <p>Hello there stranger!</p>
         <p>Hello there stranger!</p>
 
     </body>
