modyfing syntax.css for <p> tags

--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,7 @@
     <head>
 
         <title>CSS for beginners, contact me.</title>
-
-        <style>
-
-                p{
-                    font-size: 10px;
-                    color: red;
-                }
-            
-        </style>
+        <link rel="stylesheet" href="css/syntax.css">
 
     </head>
 
