--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!--<link rel="stylesheet" href="css/syntax.css">
-        -->
+        <link rel="stylesheet" href="css/syntax.css">
         <title>CSS for beginners</title>
-        <style>
-
-            .welcome{
-                font-size: 10px;
-                color: red;
-            }
-        
-        </style>
+       
     </head>
 
     <body>
