adding styles for diffrent tags in syntax.css

--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,12 @@
             <h1>Contact Us</h1>
         </div>
         
-        <p>Hello there stranger!</p>
-        <p>Hello there stranger!</p>
-        <p>Hello there stranger!</p>
-        <p>Hello there stranger!</p>
-        <p>Hello there stranger!</p>
-        <p>Hello there stranger!</p>
-        <p>Hello there stranger!</p>
+        <p>Hello there stranger! Contact us below</p>
+        <p>Paragraphs are great</p>
         
+        <a href="http://www.google.com">google</a>
+        <br>
+        <br>
+        <span>This is a span tag</span>
 </body>
 </html>
