adding classes, ids and plain tags to syntax.css

--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,20 @@
     <body>
         <div id="header">
             <h1>Contact Us</h1>
+            <h2>Contact area51 folks</h2>
         </div>
         
+        <h2 id="content-header">Content</h2>
+
         <p>Hello there stranger! Contact us below</p>
         <p>Paragraphs are great</p>
         
         <a href="http://www.google.com">google</a>
-        <br>
-        <br>
+
         <span>This is a span tag</span>
-</body>
+
+        <span class="deck">span tag</span>
+        <span class="deck">span tag 2</span>
+        <span class="deck">span tag 3</span>
+    </body>
 </html>
