playing around with conflicts

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,14 @@
         <title>CSS for beginners, contact me.</title>
         <link rel="stylesheet" href="css/syntax.css">
 
+        <style>
+        
+            span{
+                color: purple;
+            }
+        
+        </style>
+
     </head>
 
     <body>
