--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
         
         <h2 id="content-header">Content</h2>
 
-        <div>
-            <p>Hello there stranger! Contact us below</p>
+        <div id="main-content">
+            <p>Hello there <strong>stranger!</strong> Contact us below</p>
             <p>Paragraphs are great</p>
         </div>
 
