using \!important exception

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,8 @@
             <p>Paragraphs are great</p>
         </div>
 
+        <p>P tag outside of main content.</p>
+
         <a href="http://www.google.com">google</a>
 
         <span>This is a span tag</span>
