using descendant selectors

--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,14 @@
         <h2 id="content-header">Content</h2>
 
         <div id="main-content">
+
             <p>Hello there <strong>stranger!</strong> Contact us below</p>
             <p>Paragraphs are great</p>
+
+            <div id="sub-content">
+                <p>More content</p>
+            </div>
+            
         </div>
 
         <p>P tag outside of main content.</p>
