--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
         
         <h2 id="content-header">Content</h2>
 
+        <p>some text</p>
+        
         <div id="main-content">
 
             <p>Hello there <strong>stranger!</strong> Contact us below</p>
