--- a/articles.html
+++ b/articles.html
@@ -6,22 +6,42 @@
 </head>
 <body>
 
-    <h2>Most recent articles</h2>
+    <div>
 
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
-        <p>To read more click <a href="a">here</a></p>
-    </article>
+        <h1>Most recent articles</h1>
 
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
-        <p>To read more click <a href="a">here</a></p>
-    </article>
+        <article>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>To read more click <a href="a">here</a></p>
+        </article>
 
-    
+        <hr>
+        <h2>marketing message</h2>
+        <a href="a">Offers!</a>
+
+        <article>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>To read more click <a href="a">here</a></p>
+        </article>
+
+        <hr>
+        <h2>marketing message</h2>
+        <a href="a">Offers!</a>
+
+        <article>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
+            <p>To read more click <a href="a">here</a></p>
+        </article>
+
+    </div>
 </body>
 </html>
