testing combined selectors

--- a/articles.html
+++ b/articles.html
@@ -10,7 +10,7 @@
 
         <h1>Most recent articles</h1>
 
-        <article>
+        <article class="featured-content">
             <h2>Title</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
@@ -41,6 +41,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias tempora facilis ad natus, voluptatum eos vero quasi porro quo unde maiores odit iure praesentium quibusdam ex. Porro, sequi enim?</p>
             <p>To read more click <a href="a">here</a></p>
         </article>
+
+        <div class="featured-content">
+            <img src="#">
+        </div>
+
+        <div>
+            <img src="#">
+        </div>
 
     </div>
 </body>
