--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         <p>Hello there stranger!</p>
         <p>Hello there stranger!</p>
 
+        <div id="main-content">
+
+            <h1>CSS For Beginners</h1>
+
+            <div class="box">This is the content</div>
+            <div class="box">This is the content</div>
+
+        </div>
+        
     </body>
 
 </html>
