--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <h1>CSS For Beginners</h1>
 
-            <div class="box">This is the content</div>
+            <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit soluta accusamus, doloremque architecto error libero dicta nam at quasi. Illo in dignissimos nihil est minus ut ad amet rem aspernatur!</div>
             <div class="box">This is the content</div>
 
         </div>
