--- a/index.html
+++ b/index.html
@@ -36,14 +36,54 @@
 
         <h1>CSS For Beginners</h1>
 
-        <div class="box dashed">dashed</div>
-        <div class="box dotted">dotted</div>
-        <div class="box double">double</div>
-        <div class="box groove">groove</div>
-        <div class="box inset">inset</div>
-        <div class="box outset">outset</div>
-        <div class="box ridge">ridge</div>
-        <div class="box solid">solid</div>
+        <div id="main-content">
+
+            <h1>CSS For Beginners</h1>
+            <h2>Block Level Elements</h2>
+            <div class="block">Block level element</div>
+            <div class="block">Block level element</div>
+            <div class="block">Block level element</div>
+            <h2>Inline Elements</h2>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+            <span class="inline">Inline element</span>
+
+            <h1>CSS For Beginners</h1>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+            <a href="a">link</a>
+
+        </div>
 
     </body>
 
