--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 
         <div id="main-content">
 
+            <div class="static-width">Static Pixel Width</div>
+            <div class="percentage-width">Percentage Width</div>
+            <div class="inline-block">inline block</div>
+            <div class="inline-block">inline block</div>
+
+
+
             <h1>CSS For Beginners</h1>
             <h2>Block Level Elements</h2>
             <div class="block">Block level element</div>
