--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 
         <div id="main-content">
 
+            <h1>CSS For Beginners</h1>
+
             <div class="static-width">Static Pixel Width</div>
-            <div class="percentage-width">Percentage Width</div>
-            <div class="inline-block">inline block</div>
-            <div class="inline-block">inline block</div>
 
 
 
