--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <h1>CSS For Beginners</h1>
 
-            <div class="static-width">Static Pixel Width</div>
+            <div id="banner"></div>
 
 
 
