using CSS gradients

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
         <div id="main-content">
 
-            <h1>CSS For Beginners</h1>
-
-            <div id="banner"></div>
+            <a class="button">Click Me</a>
 
         </div>
 
